cmake_minimum_required(VERSION 3.15)
project(USW20_P2)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(USW20_P2 main.cpp src/Key.cpp src/User.cpp include/User.h src/Student.cpp include/Student.h src/ObjStore.cpp include/ObjStore.h src/Log.cpp include/Log.h src/TxtStore.cpp include/TxtStore.h src/DataStore.cpp include/DataStore.h)
find_package(Boost)
find_package(SQLite3)
find_package(yaml-cpp)
link_directories(include/sodium)
include_directories(include/sodium)
include_directories(include)
target_link_libraries(${PROJECT_NAME} sodium)
target_link_libraries(${PROJECT_NAME} sqlite3)